--- a/product-manager.html
+++ b/product-manager.html
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://tylko.recruitee.com/o/senior-product-owner'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tylko.recruitee.com/o/senior-product-owner'>
       Senior Product Owner - Tylko
     </a></h5> 
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o62R9fwS&__jvst=Employee&__jvsd=sbGZ9gwK&__jvsc=Twitter&bid=nT8HTKwQ'>Brandwatch Careers - Senior Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o62R9fwS&__jvst=Employee&__jvsd=sbGZ9gwK&__jvsc=Twitter&bid=nT8HTKwQ'>Brandwatch Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/product-owner-po-%E2%80%93-analista-s%C3%AAnior-13043'>Product Owner (PO) ? Analista S?nior - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/product-owner-po-%E2%80%93-analista-s%C3%AAnior-13043'>Product Owner (PO) ? Analista S?nior - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -189,7 +189,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1792324'>Job Application for Product Manager, Payments at Vimeo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1792324'>Job Application for Product Manager, Payments at Vimeo</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -253,7 +253,7 @@ other?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adomik.workable.com/j/520CF09ACB?viewed=true'>Adomik - Jobs: Product Owner (H/F) - Apply online</a></h5> 
+<h5><a href='https://adomik.workable.com/j/520CF09ACB?viewed=true'>Adomik - Jobs: Product Owner (H/F) - Apply online</a></h5> 
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -337,7 +337,7 @@ responsible for the overall management of one or more technology solutions for..
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sharpist.join.com/jobs/261518-junior-product-manager-m-f-x'>Job @ Sharpist (Berlin): (Junior) Product Manager ... | JOIN</a></h5> 
+<h5><a href='https://sharpist.join.com/jobs/261518-junior-product-manager-m-f-x'>Job @ Sharpist (Berlin): (Junior) Product Manager ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -414,7 +414,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/okcupid/jobs/1402840'>Job Application for Senior Product Manager at OKCupid</a></h5> 
+<h5><a href='https://boards.greenhouse.io/okcupid/jobs/1402840'>Job Application for Senior Product Manager at OKCupid</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -438,7 +438,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Gerresheimer/743999692164845-commercial-product-manager-m-w-d-'>Gerresheimer Commercial Product Manager (m/w/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Gerresheimer/743999692164845-commercial-product-manager-m-w-d-'>Gerresheimer Commercial Product Manager (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
